force-app/main/default/objects/SmokeTestChecklist__mdt/SmokeTestChecklist__mdt.object-meta.xml
<CustomObject>
    <description>Post-deployment metadata integrity checklist items. Each record defines a verification check (Flow activation, permission set existence, page layout assignment, custom settings, scheduled jobs) with configurable SOQL or Tooling API queries and expected results. Accessed via SmokeTestChecklist__mdt.getAll() in Apex.</description>
    <label>Smoke Test Checklist</label>
    <pluralLabel>Smoke Test Checklists</pluralLabel>
</CustomObject>