force-app/main/default/objects/SmokeTestChecklist__mdt/fields/CheckName__c.field-meta.xml
<CustomField>
    <fullName>CheckName__c</fullName>
    <description>Human-readable name for this checklist item, displayed in evaluation results and audit logs. Used as the checkName in ChecklistResult when present.</description>
    <label>Check Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>