force-app/main/default/objects/SmokeTestChecklist__mdt/fields/CheckType__c.field-meta.xml
<CustomField>
    <fullName>CheckType__c</fullName>
    <description>Execution strategy for this checklist item. MetadataQuery uses the Tooling API or Metadata API to inspect org configuration. SOQLValidation runs a SOQL query against standard objects. CustomApex invokes a named Apex class implementing the IChecklistExecutor interface.</description>
    <label>Check Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MetadataQuery</fullName>
            </value>
            <value>
                <fullName>SOQLValidation</fullName>
            </value>
            <value>
                <fullName>CustomApex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>