force-app/main/default/objects/SmokeTestChecklist__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>Determines the sequence in which checklist items are evaluated during post-deployment validation. Lower values execute first. Critical checks (Severity Critical) should have lower order values to fail fast.</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>