force-app/main/default/objects/SmokeTestChecklist__mdt/fields/ExpectedResult__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResult__c</fullName>
    <description>Human-readable description of the expected outcome when this checklist check passes. Displayed in the smoke test report and included in alert notifications to help operators understand what a passing result means.</description>
    <label>Expected Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>