force-app/main/default/objects/SmokeTestChecklist__mdt/fields/FailureMessage__c.field-meta.xml
<CustomField>
    <fullName>FailureMessage__c</fullName>
    <description>Operator-facing message displayed when this checklist check fails. Should include actionable remediation steps such as where to look in Setup or which deployment artifact to inspect.</description>
    <label>Failure Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>