force-app/main/default/objects/SmokeTestChecklist__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <description>When false the orchestrator skips this checklist item. Allows administrators to disable individual checks without deleting CMT records.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>