force-app/main/default/objects/SmokeTestChecklist__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>SOQL or Tooling API query to execute for this checklist item. For MetadataQuery type, this is a Tooling API query string. For SOQLValidation type, this is a SOQL query against standard objects. For CustomApex type, this field may contain a configuration JSON string passed to the executor class. Runtime validation of query syntax is handled by the MetadataIntegrityService.</description>
    <label>Query</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>