force-app/main/default/objects/SmokeTestChecklist__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Impact level when this checklist check fails. Critical failures block the deployment gate and trigger immediate alerts. Warning failures are logged and reported but do not block. Info failures are informational and do not affect the overall pass/fail result.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>